// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventReducer calls updateEvent action 1`] = `
Object {
  "count": 0,
  "error": "",
  "event": Object {
    "category": Object {
      "id": 1,
      "name": "name",
    },
    "description": "description",
    "endDate": Any<Date>,
    "id": 1,
    "location": "location",
    "name": "Name",
    "startDate": Any<Date>,
  },
  "events": Array [],
  "next": null,
  "previos": null,
}
`;

exports[`EventReducer calls updateEvents action 1`] = `
Object {
  "count": 0,
  "error": "",
  "event": Object {
    "category": null,
    "description": "",
    "endDate": null,
    "id": NaN,
    "location": "",
    "name": "",
    "startDate": null,
  },
  "events": Array [
    Object {
      "category": Object {
        "id": 1,
        "name": "name",
      },
      "description": "description",
      "endDate": Any<Date>,
      "id": 1,
      "location": "location",
      "name": "Name",
      "startDate": Any<Date>,
    },
  ],
  "next": null,
  "previos": null,
}
`;
